feat(缺陷管理): 第三方平台同步功能